--- a/TestWebsite/Pages/BookDetails.cshtml
+++ b/TestWebsite/Pages/BookDetails.cshtml
@@ -5,7 +5,9 @@
 
 <div class="book-details">
     <h2>@Model.Book.Title</h2>
-    <img src="@Model.Book.ImageURL" alt="Cover image of @Model.Book.Title" />
+    <!-- <img src="@Model.Book.ImageURL" alt="Cover image of @Model.Book.Title" />-->
+    <img src="images/analysis.png" alt="Cover image of " />
+
     <p>Author: @Model.Book.Author</p>
     <p>Price: $@Model.Book.Price</p>
 </div>
