Styling for books

--- a/TestWebsite/Pages/Index.cshtml
+++ b/TestWebsite/Pages/Index.cshtml
@@ -10,14 +10,14 @@
         <div id="bestsellers">
             @foreach (var book in Model.BestSellers)
             {
-<a href="/BookDetails?id=@book.BookID">
-    <div>
-        <h5>@book.Title</h5>
-        <img src="@book.ImageURL" alt="Cover image of @book.Title" />
-        <p>by @book.Author</p>
-        <p>Price: $@book.Price.ToString()</p>
-    </div>
-</a>
+                <a href="/BookDetails?id=@book.BookID" class="book">
+                    <div>
+                        <h5>@book.Title</h5>
+                        <img src="@book.ImageURL" alt="Cover image of @book.Title" class="bestseller-image"/>
+                        <p>by @book.Author</p>
+                        <p>Price: $@book.Price.ToString()</p>
+                    </div>
+                </a>
             }
 
         </div>
