--- a/TestWebsite/Pages/Shared/_Layout.cshtml
+++ b/TestWebsite/Pages/Shared/_Layout.cshtml
@@ -39,14 +39,17 @@
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Cart">
+                                <i class="fas fa-shopping-cart"></i> Cart
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             @if (!string.IsNullOrEmpty(customerName) && !string.IsNullOrEmpty(customerEmail))
                             {
-                                <!-- Display Customer Profile -->
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Customer">Profile</a>
                             }
                             else
                             {
-                                <!-- Display Login Button -->
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Login">Login</a>
                             }
                         </li>
