--- a/TestWebsite/Pages/Cart.cshtml
+++ b/TestWebsite/Pages/Cart.cshtml
@@ -1,10 +1,11 @@
 ﻿@page
 @model TestWebsite.Pages.CartModel
+
 @{
+    bool isLoggedIn = HttpContext.Session.GetInt32("CustomerID") != null; // Check if the user is logged in
 }
 
 <h2>Your Cart</h2>
-
 <table class="table">
     <thead>
         <tr>
@@ -23,7 +24,7 @@
                 <td>@book.Title</td>
                 <td>$@book.Price.ToString("N2")</td>
                 <td>@entry.Value</td>
-                <td>$@(book.Price * entry.Value).ToString("N2")</td>
+                <td>$@((book.Price * entry.Value).ToString("N2"))</td>
                 <td>
                     <form method="post" class="form-inline">
                         <input type="hidden" name="bookId" value="@entry.Key" />
@@ -40,6 +41,18 @@
             <th colspan="3">Total</th>
             <th>$@Model.CalculateTotal().ToString("N2")</th>
             <th></th>
+        </tr>
+        <tr>
+            <td colspan="5" class="text-right">
+                @if (isLoggedIn)
+                {
+                    <button class="btn btn-primary" onclick="location.href='@Url.Page("/Checkout")'">Proceed to Checkout</button>
+                }
+                else
+                {
+                    <p>Please <a href="@Url.Page("/Login")">log in</a> to proceed to checkout.</p>
+                }
+            </td>
         </tr>
     </tfoot>
 </table>
