--- a/TestWebsite/Pages/Login.cshtml
+++ b/TestWebsite/Pages/Login.cshtml
@@ -10,4 +10,7 @@
         </div>
         <button type="submit" class="btn btn-primary">Login</button>
     </form>
+    <div class="register-link">
+        <p>Don't have an account? <a href="/Register">Create one now!</a></p>
+    </div>
 </div>
