--- a/TestWebsite/Pages/Shared/_Layout.cshtml
+++ b/TestWebsite/Pages/Shared/_Layout.cshtml
@@ -46,11 +46,19 @@
                         <li class="nav-item">
                             @if (!string.IsNullOrEmpty(customerName) && !string.IsNullOrEmpty(customerEmail))
                             {
+                                var isAdmin = Context.Session.GetString("IsAdmin") == "True";
+                                if (isAdmin)
+                                {
+                                    <a class="nav-link text-dark" asp-area="" asp-page="/AdminDashboard">Profile</a>
+                                }
+                                else
+                                {
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Customer">Profile</a>
+                                }
                             }
                             else
                             {
-                                <a class="nav-link text-dark" asp-area="" asp-page="/Login">Login</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Login">Login</a>
                             }
                         </li>
                     </ul>
