--- a/TestWebsite/Pages/About.cshtml
+++ b/TestWebsite/Pages/About.cshtml
@@ -12,7 +12,7 @@
     <div class="member">
         <h3 class="member-name">Grace</h3>
         <p class="member-info">
-            Grace is a junior majoring in Cybersecurity with a minor in Mathematics. She is an active member of the Theta sorority, which is a significant part of her college life and possibly her entire personality. When not engaged with Theta activities, Grace can be found engaging in Theta activities due to her hobbies being unknown.
+            Grace is a junior majoring in Cybersecurity with a minor in Mathematics. When she is not toning her absolutely massive muscles or reading very profound books, she spends her free time saving orphans and puppies from fires. Following graduation, Grace turned down an offer to be the president of NASA to pursue a career as a trophy wife.
         </p>
     </div>
 
