--- a/TestWebsite/Pages/About.cshtml
+++ b/TestWebsite/Pages/About.cshtml
@@ -12,7 +12,7 @@
     <div class="member">
         <h3 class="member-name">Grace</h3>
         <p class="member-info">
-            Grace is a junior majoring in Cybersecurity with a minor in Mathematics. When she is not toning her absolutely massive muscles or reading very profound books, she spends her free time saving orphans and puppies from fires. Following graduation, Grace turned down an offer to be the president of NASA to pursue a career as a trophy wife.
+            Grace is a junior majoring in Cybersecurity with a minor in Mathematics. She is also an active and engaged member of the Theta sorority. In her free time, she enjoys reading and engages in various literary pursuits in her free time.
         </p>
     </div>
 
